force-app/main/default/objects/RetryableJob__c/RetryableJob__c.object-meta.xml
<CustomObject>
    <label>RetryableJob</label>
    <nameField>
        <label>RetryableJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RetryableJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>