force-app/main/default/objects/RetryableJob__c/fields/className__c.field-meta.xml
<CustomField>
    <fullName>className__c</fullName>
    <label>className</label>
    <length>50</length>
    <type>Text</type>
</CustomField>