force-app/main/default/objects/RetryableJob__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>className</label>
    <length>255</length>
    <type>Text</type>
</CustomField>