force-app/main/default/objects/RetryableJob__c/fields/nextTry__c.field-meta.xml
<CustomField>
    <fullName>nextTry__c</fullName>
    <label>Next try</label>
    <type>DateTime</type>
</CustomField>