force-app/main/default/objects/RetryableJob__c/fields/serializedJob__c.field-meta.xml
<CustomField>
    <fullName>serializedJob__c</fullName>
    <label>parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>